TBRJ-6 Create book draw
