# server/common/api.yml
@@ -57,7 +57,7 @@ paths:
             $ref: "#/definitions/BookBody"
       responses:
         200:
-          description: The book was created
+          description: The book was created      
 
   /book/{id}:
     get:
@@ -105,6 +105,16 @@ paths:
           description: The book was deleted
         404:
           description: Book not found
+
+  /book/draw:
+    get:
+      tags:
+        - Book Draw
+      description: Pick one of the saved books 
+      responses:
+        200:
+          description: Return one of the saved books         
+
           
   /spec:
     get:
